--- a/package.json
+++ b/package.json
@@ -12,11 +12,17 @@
   "dependencies": {
     "axios": "^0.18.0",
     "core-js": "^2.6.5",
+    "echarts": "^4.2.1",
+    "install": "^0.12.2",
+    "qs": "^6.7.0",
     "register-service-worker": "^1.6.2",
+    "sentiment": "^5.0.1",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
+    "vue-echarts": "^4.0.2",
     "vue-property-decorator": "^8.1.0",
     "vue-router": "^3.0.3",
+    "vuebars": "^0.1.3",
     "vuetify": "^1.5.5",
     "vuex": "^3.0.1"
   },
