--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "axios": "^0.18.0",
     "core-js": "^2.6.5",
+    "date-fns": "^1.30.1",
     "echarts": "^4.2.1",
     "install": "^0.12.2",
+    "iso-639-1": "^2.0.5",
     "qs": "^6.7.0",
     "register-service-worker": "^1.6.2",
     "sentiment": "^5.0.1",
